--- a/build.gradle
+++ b/build.gradle
@@ -2,9 +2,11 @@
 
 buildscript {
     repositories {
-        google()
         jcenter()
-        
+        maven {
+            url 'https://maven.google.com'
+        }
+        maven {url 'https://maven.fabric.io/public'}
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.2'
@@ -16,9 +18,11 @@ buildscript {
 
 allprojects {
     repositories {
-        google()
         jcenter()
-        
+        maven {
+            url 'https://maven.google.com'
+        }
+
     }
 }
 
