--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
             url 'https://maven.google.com'
         }
         maven {url 'https://maven.fabric.io/public'}
+        google()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.2'
@@ -22,6 +23,7 @@ allprojects {
         maven {
             url 'https://maven.google.com'
         }
+        google()
 
     }
 }
