Used viewinflater to put form templates dynamically into second activity, transformed UniversityCourse into a Parcelable class so that objects can be passed from one activity to another.
Creating third summary output activity (probably a simple textview) and then passing object data to fourth activity which will show things on the calendar.

mprogress bar needs to be updated and exception throwing needs to be checked.

Google API only allows reading and writing data. Need code for a calendar display that provides a summary of study times that is preferably filterable.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,22 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
+        <activity android:name=".YourCalendarActivity"
+            android:parentActivityName=".ThirdSummaryActivity">
+            <!-- The meta-data tag is required if you support API level 15 and lower -->
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".ThirdSummaryActivity" />
+        </activity>
+
+        <activity android:name=".ThirdSummaryActivity"
+            android:parentActivityName=".SecondInputActivity">
+            <!-- The meta-data tag is required if you support API level 15 and lower -->
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".SecondInputActivity" />
+        </activity>
+
         <activity android:name=".SecondInputActivity"
             android:parentActivityName=".MainActivity">
             <!-- The meta-data tag is required if you support API level 15 and lower -->
